2014-01-11  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgnuplib.h src/win/wgdiplus.cpp src/win/wgraph.c:  Using
	MinGW 4.8.1, FontFamily::GenericSansSerif() results in unresolved
	externals during linking. This is a bug in MinGW's runtime.

	* src/win/winmain.c:  Current version of MinGW does not offer working
	version of __argc/__argv, but _argv/_argv. A web search shows that
	MinGW-w64 is different. This is a bug in MinGW's runtime.

	* win/gnuplot.iss (MinVersion):  Minimum required version of the
	installer is XP.

2014-01-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c:  Fix iteration over parametric function plots.
	Bug #1314

	* src/datafile.c (df_generate_pseudodata):  Allow use of '++' pseudofile
	to sample the parametric variables U and V in 3D parametric mode.

2014-01-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c src/datafile.h src/plot2d.c:  Only include support for
	"thru" if configured with --enable-backwards-compatibility

	* src/datafile.c src/gp_types.h src/graph3d.c src/plot2d.c src/plot3d.c
	src/tables.c src/tabulate.c:

	New keyword pair "with table" that bypasses all style-specific input
	processing, column restrictions, smoothing, etc.  For example:
	    set table "table.dat"
	    plot FOO using 1:2:3:4:5:($6+$7):8:9:10 with table

2014-01-08  Thomas Bleher <tbleher@gmx.de>

	* config/msvc/Makefile:  Add configuration option for compiling the qt
	terminal on Windows/MSVC.  Note that the terminal itself does not work
	yet on Windows, but this patch makes it easier to work on fixing that.

2014-01-04  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wcommon.h src/win/wgdiplus.cpp|h src/win/wgnuplib.h
	src/win/wgraph.c src/win/resourc.h term/win.trm:  New (optional)
	variant of the windows terminal backend which draws using the GDI+ API
	whenever possible. This is much faster in some cases than the old
	backend which switches between GDI and GDI+ to support antialiasing